--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,19 +37,77 @@
 } */
 
 /* </span> */
+.app-name {
+  color: #045de9;
+}
+a {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
+  text-decoration: none;
+}
+.choose {
+  color: rgb(231, 87, 87);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 30px;
+}
+.python {
+  border-radius: 10px;
+  width: 1100px;
+  height: 120px;
+  margin: 25px 0px;
+  background-color: #2a2a72;
+  background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%);
+}
+.python-link {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: white;
+  font-size: 50px;
+}
+.js-link {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+  color: white;
+  font-size: 50px;
+}
+.ruby-link {
+  color: white;
+  font-size: 50px;
+}
+.javascript {
+  border-radius: 10px;
+  width: 1100px;
+  height: 120px;
+  margin: 25px 0px;
+  background-color: #fbb034;
+  background-image: linear-gradient(315deg, #fbb034 0%, #ffdd00 74%);
+}
+.ruby {
+  border-radius: 10px;
+  width: 1100px;
+  height: 120px;
+  margin: 25px 0px;
+  background-color: #3f0d12;
+  background-image: linear-gradient(315deg, #3f0d12 0%, #a71d31 74%);
+}
 html, body {
   height: 100vh;
   width: 100vw;
 }
 
+.language {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  align-items: center;
+}
 .speed {
   min-width: 50px;
   min-height: 50px;
   /* margin: 50px; */
   font-family: "Roboto";
-  font-size: 50px;
+  font-size: 70px;
   border-bottom: 10px solid aqua;
+  text-decoration: none;
 }
 
 .feedback{
@@ -77,6 +135,7 @@ html, body {
   justify-content: center;
 }
 .timer {
+  font-size: 30px;
   position: absolute;
   height: 40px;
   width: 80px;
@@ -86,6 +145,9 @@ html, body {
   color: white;
 }
 .text {
+  font-family: 'Inconsolata', monospace;
+  color: white;
+  
   margin-left: 20px;
   margin-bottom: 50px;
   letter-spacing: 3px;
